les builder retournent leur résultat et meilleur séparation dans les managers